@@ -58,9 +58,12 @@
             <version>${spring.version}</version>
         </dependency>
 
-
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
@@ -78,7 +81,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-
+                <configuration>
+                    <argLine>
+                        --add-opens beerPunishment.restserver/beerPunishment.restserver=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
 
